--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,11 +17,12 @@
   "license": "MIT",
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.6.6",
-    "zustand": "^4.3.8"
+    "@wagmi/chains": "^1.1.0",
+    "zustand": "^4.3.8",
+    "@walletconnect/ethereum-provider": "^2.7.8",
+    "@web3modal/standalone": "^2.4.3"
   },
   "peerDependencies": {
-    "@walletconnect/ethereum-provider": ">=2.7.7",
-    "@web3modal/standalone": ">=2.4.2",
     "typescript": ">=5.1.3"
   },
   "peerDependenciesMeta": {
