--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,9 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@walletconnect/ethereum-provider": "^2.7.8",
+    "@web3modal/react": "^2.4.3",
+    "@web3modal/standalone": "^2.4.3",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
